--- a/source/_posts/网课/网课教程(1)  前言.md
+++ b/source/_posts/网课/网课教程(1)  前言.md
@@ -1,7 +1,10 @@
 ---
 title: 网课教程(1)  前言
 date: 2022-01-24 18:20:47
-tags: 网课脚本 脚本 网课脚本
+tags: 
+    - 网课脚本
+    - 脚本
+    - 网课脚本
 categories: 网课
 ---
 
